# DatabaseGenerator

./: CMakeLists.txt  Generator(2).docx  address.csv  database.cpp  database_reader.cpp  head.h  job.csv  job_proportion.csv  main.cpp  operator.csv  phone.csv  student_11.xlsx
